<resources>
    <string name="app_name">Book Store</string>
    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Button Labels -->
    <string name="all_products">See All Products</string>
    <string name="products_more_than_fifteen">Products > $15</string>
    <string name="feldheim_books">All Feldheim Books</string>

    <string name="hint_name">Product Name</string>
    <string name="hint_price">Price e.g 10.00</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_number">Supplier Phone Number</string>
    <string name="err_msg_name">Enter product name</string>
    <string name="err_msg_price">Enter a price</string>
    <string name="err_msg_quantity">Enter a quantity</string>
    <string name="err_msg_supplier_name">Enter the supplier name</string>
    <string name="err_msg_supplier_number">Enter supplier phone number</string>

    <!-- Title empty list text view [CHAR LIMIT=20] -->
    <string name="empty_list_title">There are no books to read here&#8230;</string>

    <!-- Title empty list hint [CHAR LIMIT=20] -->
    <string name="empty_list_hint">Get started by adding a book</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="details_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to view and edit product details [CHAR LIMIT=20] -->
    <string name="product_details_activity_title_edit_pet">Product Details (Edit)</string>

    <!-- Title for the stock list activity [CHAR LIMIT=20] -->
    <string name="stock_list_activity_title">Bookstore Stock List</string>

    <!-- Label for editor menu option to save product and leave product details page [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="quantity">Quantity: </string>

    <string name="successful_insertion">Product saved</string>

    <string name="successful_edit">Product info updated</string>

    <string name="entry_error_string">Error with saving product</string>

    <string name="edit_error_string">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <string name="place_order">Place Order\n By Phone</string>

    <string name="sale">SALE</string>


</resources>
