<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/data_entry_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/data_entry_layout_margin">

            <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/data_entry_layout_margin"
            android:layout_marginTop="@dimen/dp_8">

            <EditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/data_entry_layout_margin"
            android:layout_marginTop="@dimen/dp_8">

            <EditText
                android:id="@+id/product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/data_entry_layout_margin"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/decrement_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:background="@drawable/ic_remove_circle"
                android:backgroundTint="@color/colorPrimary" />


            <ImageButton
                android:id="@+id/increment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:background="@drawable/ic_add_circle"
                android:backgroundTint="@color/colorPrimary" />

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/data_entry_layout_margin"
            android:layout_marginTop="@dimen/dp_8">

            <EditText
                android:id="@+id/supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_supplier_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/data_entry_layout_margin"
            android:layout_marginTop="@dimen/dp_8">

            <EditText
                android:id="@+id/supplier_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_supplier_number"
                android:inputType="phone"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_entry_layout"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_local_phone" />

</android.support.design.widget.CoordinatorLayout>